--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
       <a href="https://github.com/Valeco96" target="_blank"
         >Valentina Correale</a
       >
-      and is <a href="https://github.com/Valeco96/fables-generator" target="_blank">open-sourced on Github</a> and hosted on
-      <a href="">Netlify</a>
+      and is
+      <a href="https://github.com/Valeco96/fables-generator" target="_blank"
+        >open-sourced on Github</a
+      >
+      and hosted on
+      <a href="https://ai-fables-generator.netlify.app/" target="_blank"
+        >Netlify</a
+      >
     </footer>
     <script src="src/javascript.js"></script>
   </body>
