Added the HTML structure

--- a/index.html
+++ b/index.html
@@ -7,8 +7,24 @@
     <title>Fables Generator</title>
   </head>
   <body>
-    <h1>📖 Fables Generator 📖</h1>
-    <button>Click to generate an amazing and fantastic fable</button>
+    <header>
+      <h1>📖 Fables Generator 📖</h1>
+    </header>
+    <main>
+      <form>
+        <input
+          type="text"
+          placeholder="Enter the topic of the fairy tail here"
+          id="search-bar"
+          autofocus
+          required
+          autocomplete="off"
+        />
+        <input type="submit" />
+      </form>
+      <button>Click to generate an amazing and fantastic fable</button>
+      <div>The text will go here..</div>
+    </main>
     <footer>
       This AI project was coded by
       <a href="https://github.com/Valeco96" target="_blank"
