--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <title>AI Fables Generator</title>
   </head>
   <body>
     <div class="container">
+      <div class="container-2">
       <header>
         <h1>📖 AI Fables Generator 📖</h1>
       </header>
       <main>
-        <form>
+        <form id="fable-generator">
           <input
             type="text"
             placeholder="Enter the topic of the fairy tail here"
@@ -23,11 +25,8 @@
           />
           <input type="submit" class="submit-button" />
         </form>
-        <div class="fable">
-          The text will go here..
-          <br />
-          and also here :D
-        </div>
+      </div>
+        <div class="fable" id="fable"></div>
       </main>
       <footer>
         This AI project was coded by
