Adding UX features - part 1

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <form id="fable-generator">
           <input
             type="text"
-            placeholder="Enter the plot or main character of your fairy tail here"
+            placeholder="Enter the main character of your fairy tail here"
             class="search-bar"
             id="user-input"
             autofocus
@@ -26,9 +26,10 @@
             autocomplete="off"
           />
           <input type="submit" class="submit-button" />
-        </form>
+          </form>
+          <small class="hint">i.e. Princess, Magician, Giant</small>
       </div>
-        <div class="fable" id="fable"></div>
+        <div class="fable hidden" id="fable"></div>
       </main>
       <footer>
         This AI project was coded by
