--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             required
             autocomplete="off"
           />
-          <input type="submit" class="submit-button" />
+          <input type="submit" value="Submit" class="submit-button" />
           </form>
           <small class="hint">i.e. Princess, Magician, Giant</small>
       </div>
